Replaced Default info

--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,9 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div>
-			<h1>Scott Klemmer</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<h1>Arthur Tran</h1>
+			<p>Arthur Tran is a student at University of California San Diego, pursuing an education in Cognitive Science
+			with a Specialization in Human Computer Interaction.</p>
 		</div>
 
 
@@ -29,10 +30,13 @@
 		<!-- img tags are images. Lorem Pixel will deliver random images; handy! -->
 		<!-- a are anchors, also known as hyperlinks. Use the href attribute to tell the browser where to go when the user clicks -->
 		<div id="project1">
-			<a href="project.html">
-				<img src="images/lorempixel.people.1.jpeg" alt="Lorem Pixel image">
-				<p>Waiting in Line</p>
+			<a href="https://github.com/art017/Prime-Finder">
+				<img src="images/Prime.png" alt="Prime Factorization">
+				<p>Prime-Finder</p>
 			</a>
+			<p>A Java program that will the functions of determining whether a number is prime, find all prime numbers within
+			a user given range, or calculate the prime factorization of a number.</p>
+		</div>
 		</div>
 		<div id="project2">
 			<a href="project.html">
